--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ Tudo é BOX
 
 */
 
+/*Global*/
 body{
 
     background: #E5E5E5;
@@ -27,6 +28,10 @@ body{
 
     margin: 0;
     
+}
+
+body.hideScroll{
+    overflow: hidden;
 }
 
 a{
@@ -45,6 +50,33 @@ p, .description{
     letter-spacing: 0.1px;
 }
 
+.button{
+    color: white;
+    background: #FF5E84;
+
+    width: 150px;
+    height: 40px;
+
+
+    font-size: 14px;
+    font-weight: bold; 
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border-radius: 8px;
+    box-shadow: 0px 8px 16px rgba(255, 0, 92, 0.16);
+}
+
+.button:hover{
+    text-decoration: none;
+    background-color: #0984e3;
+}
+
+ 
+/*Padrão*/
+
 #container{
     width: 80%;
     max-width: 980px;
@@ -57,7 +89,7 @@ p, .description{
 #intro{
     width: 300px;
 
-    margin-right: 20px;
+    margin-right: 64px;
 }
 
 main{
@@ -94,21 +126,6 @@ button{
 
 button:hover{
     text-decoration: underline;
-}
-
-button.fat{
-    color: white;
-    background: #FF5E84;
-
-    width: 150px;
-    height: 40px;
-
-    border-radius: 6px;
-    box-shadow: 0px 8px 16px rgba(255, 0, 92, 0.16);
-}
-
-button.fat:hover{
-    text-decoration: none;
 }
 
 footer{
@@ -165,16 +182,21 @@ footer a{
 
     position: absolute;
     top: 0;
-    
-    width: 100vw;
-    height: 100vh;
+    bottom: 0;
+    right: 0;
+    left: 0;
+
 
     display: flex;
     justify-content: center;
 }
 
+#modal.addScroll {
+    overflow: auto;
+}
+
 #modal .content{
-    margin-top: 128px;
+    margin-top: 5%;
     color: white;
 }
 
@@ -188,7 +210,7 @@ footer a{
     width: 80%;
     max-width: 800px;
 
-    margin: 0 auto;
+    margin: 0 auto 5%;
 
     display: grid;
 
@@ -279,4 +301,69 @@ form button:hover{
 #modal.hide{
     opacity: 0;
     visibility: hidden;
+}
+
+/* IDEIA.HTML*/
+#page-ideas #container{
+    display: block;
+}
+#page-ideas header{
+    display: flex;
+    justify-content: space-between;
+
+}
+
+#page-ideas nav{
+    display: flex;
+    align-items: center;
+}
+
+#page-ideas nav li{
+    list-style: none;
+    margin-right: 16px;
+}
+
+#page-ideas nav li a{
+    color: #25282B;
+}
+
+#page-ideas nav li a.button{
+    color: white;
+}
+ 
+#page-ideas nav li:last-child {
+    margin: 0px;
+}
+
+
+section#title {
+    text-align: center;
+}
+
+section#title p{
+    opacity: 0.7;
+    margin: 0;
+}
+
+section#title h1{
+    margin: 0;
+
+    font-size: 28;
+}
+
+section#ideas{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    gap: 20px;
+}
+
+section#ideas .idea{
+    margin: 0;
+}
+
+section#title,
+section#ideas,
+footer{
+    margin-top: 64px;
 }
