--- a/public/style.css
+++ b/public/style.css
@@ -180,7 +180,7 @@ footer a{
 #modal{
     background: #FF5E84;
 
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     right: 0;
