--- a/views/ideias.html
+++ b/views/ideias.html
@@ -27,62 +27,19 @@
         </section>
         <main>
             <section id="ideas">
+                {% for idea in ideas %}
                 <div class='idea'>
-                    <img 
-                        src="https://image.flaticon.com/icons/svg/2729/2729007.svg"
-                        alt="Imagem de Cruso de Programação">
-                        
+                    <img src="{{idea.img}}" alt="{{idea.title}}">
                     <div class="content">
-                        <h3>Cursos de Programação</h3>
-                        <p>Estudo</p>
+                        <h3>{{idea.title}}</h3>
+                        <p>{{idea.category}}</p>
                         <div class="description">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla molestias saepe quia. Consequuntur deserunt tempore temporibus iste sapiente quas tenetur quaerat aspernatur voluptatibus dolorem maxime, atque blanditiis qui ex nisi.
+                            {{idea.description}}
                         </div>
-                        <a href="#">Ir para a Ideai</a>
+                        <a href="{{idea.url}}" target="_blank">Ir para a Ideai</a>
                     </div>
                 </div>
-                
-                <div class='idea'>
-                    <img 
-                        src="https://image.flaticon.com/icons/svg/2729/2729005.svg"
-                        alt="Imagem de Exercícios">
-                    <div class="content">
-                        <h3>Exercícios</h3>
-                        <p>Saúde</p>
-                        <div class="description">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla molestias saepe quia. Consequuntur deserunt tempore temporibus iste sapiente quas tenetur quaerat aspernatur voluptatibus dolorem maxime, atque blanditiis qui ex nisi.
-                        </div>
-                        <a href="#">Ir para a Ideai</a>
-                    </div>
-                </div>
-    
-                <div class='idea'>
-                    <img 
-                        src="https://image.flaticon.com/icons/svg/2729/2729027.svg"
-                        alt="Imagem de Meditação">
-                    <div class="content">
-                        <h3>Meditação</h3>
-                        <p>Mentalidade</p>
-                        <div class="description">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla molestias saepe quia. Consequuntur deserunt tempore temporibus iste sapiente quas tenetur quaerat aspernatur voluptatibus dolorem maxime, atque blanditiis qui ex nisi.
-                        </div>
-                        <a href="#">Ir para a Ideai</a>
-                    </div>
-                </div>
-
-                <div class='idea'>
-                    <img 
-                        src="https://image.flaticon.com/icons/svg/2729/2729032.svg"
-                        alt="Imagem de Karaoke">
-                    <div class="content">
-                        <h3>Karaoke</h3>
-                        <p>Diversão em Família</p>
-                        <div class="description">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla molestias saepe quia. Consequuntur deserunt tempore temporibus iste sapiente quas tenetur quaerat aspernatur voluptatibus dolorem maxime, atque blanditiis qui ex nisi.
-                        </div>
-                        <a href="#">Ir para a Ideai</a>
-                    </div>
-                </div>
+            {% endfor %}
             </section>
         </main> 
         <footer>
