--- a/views/ideias.html
+++ b/views/ideias.html
@@ -1,93 +1,33 @@
-<!DOCTYPE html>
-<html lang="pr-br">
-<head>
-    <meta charset="UTF-8">
+{% extends "layout.html" %}
+
+{% set bodyId = "page-ideas" %}
+
+{% block title %}
     <title>Ideias - Casa criativa</title>
+{% endblock %}
 
-    <link rel="stylesheet" href="/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700,900&display=swap" rel="stylesheet">
-</head>
-<body id="page-ideas">
-    
-    <div id="container">
-        <header>
-            <a href="/">
-                <img src="/logo.png" alt="Imagem da Logomarca">
-            </a>
-            <nav>
-                <li><a href="/">Início</a></li>
-    
-                <li><a class='button' href="#" onclick="onOff()">Nova Ideias</a></li>
-    
-            </nav>
-        </header>
-        <section id="title">
-            <p>em exibição</p>
-            <h1>Ideias</h1>
-        </section>
-        <main>
-            <section id="ideas">
-                {% for idea in ideas %}
-                <div class='idea'>
-                    <img src="{{idea.img}}" alt="{{idea.title}}">
-                    <div class="content">
-                        <h3>{{idea.title}}</h3>
-                        <p>{{idea.category}}</p>
-                        <div class="description">
-                            {{idea.description}}
-                        </div>
-                        <a href="{{idea.url}}" target="_blank">Ir para a Ideai</a>
-                    </div>
-                </div>
-            {% endfor %}
-            </section>
-        </main> 
-        <footer>
-            Com ♥ <a href="https://steamcommunity.com/id/ygui__" target="_blank">yGuiCorp</a>
-        </footer>
-    </div>
+{% block content %}
+<header>
+    <a href="/">
+        <img src="/logo.png" alt="Imagem da Logomarca">
+    </a>
+    <nav>
+        <li><a href="/">Início</a></li>
 
-       <!-- Modal(POP-UP)-->
+        <li><a class='button' href="#" onclick="onOff()">Nova Ideias</a></li>
 
-       <div id="modal" class="hide">
-        <div class="content">
-            <h1>Nova ideia</h1>
-
-            <form action="">
-            
-                <div class="input-wrapper">
-                    <label for="title">Título da Ideia</label>
-                    <input type="text" name="title">
-                </div>
-            
-                <div class="input-wrapper">
-                    <label for="category">Categoria</label>
-                    <input type="text" name="category">
-                </div>
-            
-                <div class="input-wrapper">
-                    <label for="image">Link da imagem</label>
-                    <input type="url" name="image">
-                </div>
-            
-                <div class="input-wrapper">
-                    <label for="description">Digite uma descrição para essa ideia</label>
-                    <textarea name="description" cols="30" rows="10"></textarea>
-                </div>
-            
-                <div class="input-wrapper">
-                    <label for="link">Link da ideia</label>
-                    <input type="url" name="link">
-                </div>
-            
-                <a href="#" onclick="onOff()">Voltar</a>
-                <button>Salvar</button>
-            
-            </form>
-            
-        </div>
-    </div>
-    <script src="/scripts.js"></script>
-
-</body>
-</html>
+    </nav>
+</header>
+<section id="title">
+    <p>em exibição</p>
+    <h1>Ideias</h1>
+</section>
+<main>
+    <section id="ideas">
+        {%include "all_ideas.html"%}
+    </section>
+</main> 
+<footer>
+    Com ♥ <a href="https://steamcommunity.com/id/ygui__" target="_blank">yGuiCorp</a>
+</footer>
+{% endblock %}
