--- a/views/modal.html
+++ b/views/modal.html
@@ -2,7 +2,7 @@
     <div class="content">
         <h1>Nova ideia</h1>
 
-        <form action="">
+        <form action="/" method="POST" onsubmit="return checkFields(event)">
         
             <div class="input-wrapper">
                 <label for="title">Título da Ideia</label>
